[package]
name = "task_pool"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/task_pool"
readme = "README.md"
description = """
Flexible abstraction for task-based composable multithreading.
"""

[dependencies]
arc-swap = "1.6.0"
fxhash = "0.2.1"
priority-queue = "1.3.2"
takecell = "0.1.1"
wasm_sync = "0.1.0"

[dev-dependencies]
futures-executor = "0.3.28"